--- a/project/src/Pages/styles/EstablishmentForm.css
+++ b/project/src/Pages/styles/EstablishmentForm.css
@@ -76,3 +76,28 @@
 .input-with-icons .minus-icon {
     right: 30px;
 }
+
+.add-new-establishment-button {
+    background-color: #45a049;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 19px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+}
+
+.add-new-establishment-button:hover {
+    background-color: #2f7833;
+}
+
+.plus-sign {
+    font-size: 30px;
+    margin-right: 5px;
+}
