--- a/project/src/Pages/styles/FoodEstablishmentsTable.css
+++ b/project/src/Pages/styles/FoodEstablishmentsTable.css
@@ -40,9 +40,18 @@
     border-bottom: none;
 }
 
-.food-establishments-table button {
+.action-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 5px;
+}
+
+
+.action-button {
     font-weight: bold;
     font-size: 16px;
+    width: 85px;
     background-color: #53883a;
     color: white;
     border: none;
@@ -52,7 +61,7 @@
     transition: background-color 0.3s ease;
 }
 
-.food-establishments-table button:hover {
+.action-button:hover {
     background-color: #296b0b;
 }
 
