--- a/project/src/Pages/styles/DatabaseTable.css
+++ b/project/src/Pages/styles/DatabaseTable.css
@@ -43,6 +43,7 @@
 .database-table button {
     font-weight: bold;
     font-size: 16px;
+    width: 85px;
     background-color: #53883a;
     color: white;
     border: none;
@@ -50,6 +51,11 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 5px;
+    margin-bottom: 5px;
 }
 
 .database-table button:hover {
