--- a/project/src/Pages/styles/FoodEstablishmentsTable.css
+++ b/project/src/Pages/styles/FoodEstablishmentsTable.css
@@ -65,6 +65,23 @@
     background-color: #296b0b;
 }
 
+.view-button {
+    font-weight: bold;
+    font-size: 16px;
+    /* width: 85px; */
+    background-color: #53883a;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.view-button:hover {
+    background-color: #296b0b;
+}
+
 .food-establishments-table p {
     margin-top: 20px;
     font-size: 18px;
