--- a/project/src/Pages/styles/FoodEstablishmentsTable.css
+++ b/project/src/Pages/styles/FoodEstablishmentsTable.css
@@ -68,7 +68,8 @@
 .view-button {
     font-weight: bold;
     font-size: 16px;
-    /* width: 85px; */
+    margin-top: 30px;
+    margin-right: 25px;
     background-color: #53883a;
     color: white;
     border: none;
